# DL-Inference-Cmp

./: .gitignore  .gitmodules  README.md  create_and_save.py  load_and_predict.py
native/cc/: Makefile  common.cpp  main.cpp
native/cc/graph_test_tile/: Makefile  library.c  library.h  runtime_c.h  tensor.h
native/cc/graph_test_tile/compute__concat_concat_1_concat_2/: compute__concat_concat_1_concat_2.c  compute__concat_concat_1_concat_2.h
native/java/: Main.java  Makefile
native/java/graph_test_tile/src/com/ibm/dlc/: Cbool.java  Cfloat.java  Cint32_t.java  Cint64_t.java  Compute.java  Compute__concat_concat_1_concat_2.java  DLC.java  Init.java  Reader.java  Tensor.java
native/jni/: Main.java  Makefile
native/jni/graph_test_tile/: Makefile  Makefile.linux  dlcjni.c  library.h  runtime_jni.h
native/jni/graph_test_tile/compute__concat_concat_1_concat_2/: Makefile  compute__concat_concat_1_concat_2.c  compute__concat_concat_1_concat_2.h
native/jni/graph_test_tile/src/com/ibm/dlc/: DLC.java  Dim.java  Reader.java
native/jni/graph_test_tile/weights/: repeats.w
onnxrt-server/: onnxrt-server-deploy.sh
onnxrt-server/client-ab/: input.json  lstm_ab.sh
onnxruntime/client-cc/: CMakeLists.txt  lstm_client.cpp
onnxruntime/client-python/: test_onnx.py
tensorflow/client-python/: test_tf.py
tf-serving/: tf-serving-deploy.sh
tf-serving/client-ab/: input.json  lstm_ab.sh
tf-serving/client-grpc/: WORKSPACE  lstm_client.cc  tf_repo.bzl
